--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,8 +24,7 @@
                 android:maxLines="1"
                 android:textStyle="bold"
                 android:id="@+id/username"
-                android:gravity="center"
-                android:text="minhpham"/>
+                android:gravity="center" />
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -60,8 +59,7 @@
                     android:layout_width="85dp"
                     android:layout_height="85dp"
                     android:id="@+id/image_profile"
-                    android:layout_marginLeft="20dp"
-                    android:src="@drawable/avatar1"/>
+                    android:layout_marginLeft="20dp"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -84,8 +82,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:textSize="18sp"
-                            android:textStyle="bold"
-                            android:text="1"/>
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -108,8 +105,7 @@
                             android:id="@+id/followers"
                             android:layout_gravity="center"
                             android:textStyle="bold"
-                            android:textSize="18sp"
-                            android:text="4"/>
+                            android:textSize="18sp" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -131,7 +127,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="4"
                             android:textSize="18sp"
                             android:textStyle="bold" />
 
@@ -161,16 +156,14 @@
                     android:maxLines="1"
                     android:id="@+id/fullname"
                     android:textStyle="bold"
-                    android:textSize="15sp"
-                    android:text="Pham Do Ngoc Minh"/>
+                    android:textSize="15sp" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:id="@+id/bio"
-                    android:maxLines="3"
-                    android:text="i miss her"/>
+                    android:maxLines="3" />
 
             </LinearLayout>
 
@@ -211,26 +204,17 @@
 
             </LinearLayout>
 
-            <LinearLayout
+
+            <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <ImageView
-                        android:layout_width="135dp"
-                        android:layout_height="135dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/haccoman"
-                        android:id="@+id/post_view"/>
+                android:id="@+id/recucler_view_pictures"/>
 
-
-                </LinearLayout>
-
-
-            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:id="@+id/recucler_view_saved"/>
 
 
 
