--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -87,7 +87,7 @@
                 android:id="@+id/recycler_view_users"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/bar">
+                android:layout_below="@id/recent">
 
             </androidx.recyclerview.widget.RecyclerView>
 
