--- a/app/src/main/res/layout/user_item.xml
+++ b/app/src/main/res/layout/user_item.xml
@@ -45,8 +45,20 @@
 
         </TextView>
 
-
     </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="40dp"
+        android:id="@+id/btn_follow"
+        android:textColor="@color/colorWhite"
+        android:layout_marginEnd="8dp"
+        android:text="Follow"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:visibility="gone">
+
+    </Button>
 
 </RelativeLayout>
 
