--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -51,16 +51,20 @@
             android:id="@+id/story_photo"/>
 
         <TextView
+            android:id="@+id/story_username"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="username"
-            android:textStyle="bold"
-            android:textColor="#fff"
-            android:textSize="15sp"
-            android:id="@+id/story_username"
             android:layout_centerVertical="true"
-            android:layout_margin="5dp"
-            android:layout_toEndOf="@id/story_photo"/>
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@id/story_photo"
+            android:text="username"
+            android:textColor="#039BE5"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
     </RelativeLayout>
 
@@ -78,18 +82,21 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:src="@drawable/ic_story_view" />
+            android:src="@drawable/ic_story_view"
+            android:contentDescription="TODO"
+            tools:ignore="ContentDescription,HardcodedText" />
 
         <TextView
+            android:id="@+id/seen_number"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="0"
-            android:layout_marginStart="5dp"
-            android:textStyle="bold"
-            android:textSize="16sp"
             android:layout_gravity="center"
-            android:id="@+id/seen_number"
-            android:textColor="#fff"/>
+            android:layout_marginStart="5dp"
+            android:text="0"
+            android:textColor="#607D8B"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            tools:ignore="HardcodedText" />
 
     </LinearLayout>
 
@@ -102,6 +109,7 @@
         android:layout_margin="10dp"
         android:padding="3dp"
         android:id="@+id/story_delete"
-        android:background="#20000000"/>
+        android:background="#20000000"
+        tools:ignore="ContentDescription" />
 
 </RelativeLayout>
