--- a/app/src/main/res/layout/story_item.xml
+++ b/app/src/main/res/layout/story_item.xml
@@ -1,38 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
+    android:layout_marginStart="10dp"
     android:layout_height="wrap_content">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/storyOutline"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:civ_border_color="#f23b5a"
+        app:civ_border_width="2dp"
         android:layout_gravity="center"
-        app:cardBackgroundColor="#000000"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        app:cardCornerRadius="27dp">
+        android:src="@drawable/placeholder"
+        android:layout_marginTop="5dp"
+        android:id="@+id/story_photo"/>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            app:cardCornerRadius="25dp">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_launcher_foreground"
-                tools:ignore="ContentDescription" />
-        </androidx.cardview.widget.CardView>
-    </androidx.cardview.widget.CardView>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:civ_border_color="#afafaf"
+        app:civ_border_width="2dp"
+        android:visibility="gone"
+        android:layout_gravity="center"
+        android:src="@drawable/placeholder"
+        android:layout_marginTop="5dp"
+        android:id="@+id/story_photo_seen"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:text="username"
+        android:id="@+id/story_username"
+        android:textColor="@color/colorBlack"
+        android:layout_gravity="center"
+        android:maxLines="1"/>
 
 </LinearLayout>
-
-
