--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -95,23 +95,23 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="35dp"
                         android:layout_gravity="center"
+                        android:layout_marginStart="35dp"
                         android:orientation="vertical">
 
                         <TextView
+                            android:id="@+id/followers"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:id="@+id/followers"
                             android:layout_gravity="center"
-                            android:textStyle="bold"
-                            android:textSize="18sp" />
+                            android:textSize="18sp"
+                            android:textStyle="bold" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="12sp"
-                            android:text="Followers"/>
+                            android:text="Followers"
+                            android:textSize="12sp" />
 
                     </LinearLayout>
 
@@ -172,7 +172,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:text="Edit Profile"
                 android:backgroundTint="#D3D3D3"
                 android:textColor="#262626"
                 android:id="@+id/edit_profile"/>
