--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3797EF</color>
+    <color name="colorAccent">#999999</color>
     <color name="colorBlack">#000000</color>
     <color name="colorWhite">#ffffff</color>
 </resources>
