--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -14,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:layout_toEndOf="@id/image_profile"
         android:layout_toStartOf="@id/post_image">
 
@@ -23,11 +23,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/username"
             android:textStyle="bold"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="@color/colorBlack"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="3dp"
             android:id="@+id/comment"/>
 
     </LinearLayout>
@@ -37,5 +38,4 @@
         android:layout_height="40dp"
         android:layout_alignParentEnd="true"
         android:id="@+id/post_image"/>
-
 </RelativeLayout>
