add icon and change profile fragment

--- a/app/src/main/res/layout/activity_followers.xml
+++ b/app/src/main/res/layout/activity_followers.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:background="?android:attr/windowBackground"
         android:id="@+id/toolbar"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        app:titleTextColor="@color/colorPrimary"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
