--- a/app/src/main/res/layout/notification_item.xml
+++ b/app/src/main/res/layout/notification_item.xml
@@ -8,12 +8,14 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginLeft="5dp"
         android:id="@+id/image_profile"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="8dp"
         android:orientation="horizontal"
         android:layout_toEndOf="@id/image_profile"
         android:layout_toStartOf="@id/post_image">
@@ -36,6 +38,7 @@
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
+        android:layout_marginRight="5dp"
         android:layout_alignParentEnd="true"
         android:id="@+id/post_image"/>
 </RelativeLayout>
