--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -100,7 +100,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="35dp"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:id="@+id/followers1">
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -122,7 +123,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="35dp"
-                            android:orientation="vertical">
+                            android:orientation="vertical"
+                            android:id="@+id/following1">
 
                             <TextView
                                 android:layout_width="wrap_content"
