--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -91,8 +91,8 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="10sp"
-                                android:text="POSTS"/>
+                                android:textSize="12sp"
+                                android:text="Posts"/>
 
                         </LinearLayout>
 
@@ -114,8 +114,8 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="10sp"
-                                android:text="FOLLOWERS"/>
+                                android:textSize="12sp"
+                                android:text="Followers"/>
 
                         </LinearLayout>
 
@@ -137,8 +137,8 @@
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:textSize="10sp"
-                                android:text="FOLLOWING"/>
+                                android:textSize="12sp"
+                                android:text="Following"/>
 
                         </LinearLayout>
 
